AD-2004-01-15-2: Bugfix:    Did fix build on glinux
                 Changed:   qmaster, lck

AD-2004-01-15-1: Bugfix:    - Did apply patch from John Marshall for SUPER-UX
                 Changed:   utilbin

AD-2004-01-15-0: Enhancem:  - MT version of sge_qmaster.
                            - added locks for MT saftey
                 Review:    TBD
                 Changed:   qmaster, evm, gdi, lck, sgeobj, common

SG-2004-01-15-2: Enhancem:  - changed delimeter for the reporting file (new ":")
                            - changed the allowed characters in a job name
                              to the common object name specification
                            - qsub -l time requests are transformed into
                              a value based on seconds. This means, that we
                              have no ":"in the accounting and reporting 
                              files anymore.
                 Review:    JG
                 Changed:   qmaster

SG-2004-01-15-1: Bugfix:    fixed qdel -uall and qdel -u NAME
                 Review:    JG
                 Changed:   qdel, man pages

SG-2004-01-15-0: Bugfix:    fixed the build


CR-2004-01-15-3: Bugfix:    - code clean up (function names)

CR-2004-01-15-2: Bugfix:    - fixed event client where subscription 
                              ( abort() error because a used list was not subscribed)
                            - set synchron receive timeout of communication lib to
                              2 * event timeout

CR-2004-01-15-1: Enhancem.: - new function: cl_com_set_synchron_receive_timeout()
                            - some code clean up (function names)

JG-2004-01-15-1: Bugfix:    Schedd aborted when scheduling a parallel job.
                 Review:    SG
                 Testsuite: Updated access_lists and tight_integration test.

CR-2004-01-15-0: Bugfix:    removed dummy objects in commlib makefile

JG_2004-01-15-0: Enhancem.: Separated flatfile spooling base functions from 