@@ -5941,9 +5941,14 @@ proc compile_source { { do_only_install 0 } } {
    
 
    if { $do_only_install != 1 } {
-
-
    set depend_host_name [lindex $CHECK_SOURCE_COMPILE_HOSTS 0] 
+
+   foreach help_host $CHECK_SOURCE_COMPILE_HOSTS {
+      if { [ string compare [resolve_arch $help_host] "solaris64"] == 0 } {
+         puts $CHECK_OUTPUT "using host $help_host to create dependencies"
+         set depend_host_name $help_host
+      }
+   }
 
    puts $CHECK_OUTPUT "------------------------------------------"
    puts $CHECK_OUTPUT "-> starting scripts/zerodepend on host $depend_host_name ..."
