@@ -1,3 +1,6 @@
+CR-2004-01-16-0: Testsuite: prefer solaris64 architecture for building
+                            dependencies in compile_source procedure
+
 AD-2004-01-15-2: Bugfix:    Did fix build on glinux
                  Changed:   qmaster, lck
 
